Compile with Java 21